@@ -11,6 +11,12 @@ What's New in Python 3.0a2?
 Core and Builtins
 -----------------
 
+- Comparisons between str and str8 now return False/True for ==/!=.  sqlite3
+  returns str8 when recreating on object from it's __conform__ value.  The
+  struct module returns str8 for all string-related formats.  This was true
+  before this change, but becomes more apparent thanks to string comparisons
+  always being False.
+
 - Replaced `PyFile_FromFile()` with `PyFile_FromFd(fd, name. mode, buffer, 
   encoding, newline)`
 
